--- a/front/src/app/layouts/landing/landing.component.html
+++ b/front/src/app/layouts/landing/landing.component.html
@@ -35,7 +35,7 @@
             </ng-container>
         </div> -->
 <div
-    class="fuse-horizontal-navigation-wrapper w-screen flex gap-4 justify-around border-b p-4"
+    class="fuse-horizontal-navigation-wrapper w-[98%] flex gap-4 justify-around border-b p-4 overflow-hidden"
 >
     <img alt="Logo" class="w-8" />
     <div class="flex justify-center items-center">
